# compiler-cpp

./: .gitignore  CMakeLists.txt  CREATE_PR_INSTRUCTIONS.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  TESTING_CONSTEXPR_REPORT.md  TESTING_REPORT.md  build.bat  implementation-plan.mdc  simple_test.cpp  test-config.json  test_capa1.bat  test_capa1.sh  test_exhaustivo.cpp  test_quick_verification.cpp  test_simple.cpp  test_template_simple.cpp
cmake/: cpp20-compiler-config.cmake.in
docs/: CAPA1_README.md  COMPILATION_ERROR_STRATEGY.md  IMPLEMENTATION_PLAN.md  README.md  README_coroutines.md
docs/ci-cd/: README.md  build-validation.ps1  ci-advanced.yml  ci-windows.yml  run-full-validation.ps1
docs/guides/: compilation-strategy.md  project-overview.md
examples/: CMakeLists.txt  README_modules.md  coro_pingpong.cpp  hello.cpp  hello_coff.cpp  modules_main.cpp  modules_math.cpp  modules_math.ixx  test_constexpr.cpp  test_mangling.cpp  test_templates.cpp  test_unwind.cpp
include/compiler/ast/: ASTNode.h  ExpressionAST.h  TemplateAST.h
include/compiler/backend/abi/: ABIContract.h
include/compiler/backend/codegen/: InstructionSelector.h  LinkerIntegration.h  RegisterAllocator.h
include/compiler/backend/coff/: COFFDumper.h  COFFTypes.h  COFFWriter.h
include/compiler/backend/frame/: FrameBuilder.h  FrameLayout.h
include/compiler/backend/link/: MiniLinker-test.h  MiniLinker.h
include/compiler/backend/mangling/: ClassLayout.h  MSVCNameMangler.h  VTableGenerator.h
include/compiler/backend/optimization/: PeepholeOptimizer.h
include/compiler/backend/unwind/: ExceptionMapper.h  UnwindEmitter.h  UnwindTypes.h
include/compiler/common/: EnvironmentDetector.h  TemplateCache.h  TimingProfiler.h
include/compiler/common/diagnostics/: Diagnostic.h  DiagnosticEngine.h  SourceLocation.h  SourceManager.h
include/compiler/common/utils/: CommandLine.h  FileUtils.h  HashUtils.h  MemoryPool.h  StringUtils.h
include/compiler/constexpr/: ConstexprEvaluator.h
include/compiler/coroutines/: CoroutineSystem.h
include/compiler/debug/: CodeViewEmitter.h
include/compiler/diagnostics/: DiagnosticRenderer.h
include/compiler/driver/: CommandLineParser.h  CompilerDriver.h
include/compiler/frontend/: Parser.h  Preprocessor.h
include/compiler/frontend/lexer/: Lexer.h  Token.h
include/compiler/ir/: ExceptionIR.h  IR.h
include/compiler/modules/: BinaryModuleInterface.h  HeaderUnits.h  ModuleSystem.h
include/compiler/semantic/: SemanticAnalyzer.h  TemplateSystem.h
include/compiler/symbols/: Symbol.h
include/compiler/templates/: TemplateSystem.h
include/compiler/testing/: AcceptanceTestRunner.h  FuzzingEngine.h  TestFramework.h
include/compiler/types/: Type.h
scripts/: README.md  build.bat  build.sh
src/ast/: ASTNode.cpp  CMakeLists.txt  ExpressionAST.cpp  TemplateAST.cpp
src/backend/: CMakeLists.txt
src/backend/abi/: ABIContract.cpp
src/backend/codegen/: InstructionSelector.cpp  LinkerIntegration.cpp  RegisterAllocator.cpp
src/backend/coff/: COFFDumper.cpp  COFFWriter.cpp
src/backend/frame/: FrameBuilder.cpp  FrameLayout.cpp
src/backend/link/: MiniLinker.cpp
src/backend/mangling/: ClassLayout.cpp  MSVCNameMangler.cpp  VTableGenerator.cpp
src/backend/optimization/: PeepholeOptimizer.cpp
src/backend/unwind/: ExceptionMapper.cpp  UnwindCodeGenerator.cpp  UnwindEmitter.cpp
src/common/: CMakeLists.txt  EnvironmentDetector.cpp  TemplateCache.cpp  TimingProfiler.cpp
src/common/diagnostics/: Diagnostic.cpp  DiagnosticEngine.cpp  SourceLocation.cpp  SourceManager.cpp
src/common/utils/: CommandLine.cpp  FileUtils.cpp  HashUtils.cpp  MemoryPool.cpp  StringUtils.cpp
src/constexpr/: CMakeLists.txt  ConstexprEvaluator.cpp
src/coroutines/: CMakeLists.txt  CoroutineSystem.cpp  CoroutineSystem_new.cpp
src/debug/: CodeViewEmitter.cpp
src/diagnostics/: DiagnosticRenderer.cpp
src/driver/: CMakeLists.txt  CommandLineParser.cpp  CompilerDriver.cpp  CompilerDriver_clean.cpp  main.cpp
src/frontend/: CMakeLists.txt  Parser.cpp  Preprocessor.cpp
src/frontend/lexer/: Lexer.cpp  Token.cpp
src/ir/: CMakeLists.txt  ExceptionIR.cpp  IR.cpp
src/modules/: BinaryModuleInterface.cpp  CMakeLists.txt  HeaderUnits.cpp  ModuleSystem.cpp
src/semantic/: SemanticAnalyzer.cpp  TemplateSystem.cpp
src/symbols/: CMakeLists.txt  Symbol.cpp
src/templates/: CMakeLists.txt  TemplateSystem.cpp
src/testing/: AcceptanceTestRunner.cpp  FuzzingEngine.cpp  TestFramework.cpp
src/types/: CMakeLists.txt  Type.cpp
tests/: CMakeLists.txt
tests/integration/: test_frontend_integration.cpp  test_integration.cpp
tests/unit/: test_abi.cpp  test_abi_contract.cpp  test_coff_writer.cpp  test_constexpr.cpp  test_constexpr_performance.cpp  test_constexpr_stress.cpp  test_coroutines.cpp  test_integration_constexpr_templates.cpp  test_lexer.cpp  test_mangling.cpp  test_modules.cpp  test_parser.cpp  test_preprocessor.cpp  test_templates.cpp  test_types.cpp  test_unwind.cpp
tools/: CMakeLists.txt
