# =============================================================================
# Sistema de Corroutinas C++20
# =============================================================================

# TODO: Implementar sistema de corroutinas en Capa 8
# Por ahora, este módulo está vacío

# Crear librería coroutines (vacía por ahora)
add_library(cpp20-compiler-coroutines INTERFACE)

# Alias
add_library(cpp20-compiler::coroutines ALIAS cpp20-compiler-coroutines)
